@@ -3,6 +3,6 @@
 	section="Help" \
 	hints="sidux" \
 	title="seminarix handbook" \
-	icon32x32="/usr/share/pixmaps/seminarix-handbook.xpm" \
-	icon16x16="/usr/share/pixmaps/seminarix-handbook-16.xpm" \
+	icon32x32="/usr/share/pixmaps/siduxedu.xpm" \
+	icon16x16="/usr/share/pixmaps/siduxedu-16.xpm" \
 	command="x-www-browser /usr/share/seminarix-handbook/index.html"
